--- a/.github/workflows/firmware.yml
+++ b/.github/workflows/firmware.yml
@@ -22,6 +22,25 @@ on:
       - '.github/workflows/*.json'
       - '!**/README.md'
       - '!**.rst'
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
+      tags:
+        description: 'Test scenario tags'
+        required: false
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
 
 jobs:
   build-firmware:
